--- a/diseñoper.html
+++ b/diseñoper.html
@@ -1,47 +1,158 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
- <meta charset="UTF-8">
- <title>Gracias por mandar tu diseño</title>
- <style>
-   body {
-     background-color: #800020; /* color bordeaux */
-     font-family: Arial, sans-serif;
-     color: white;
-     display: flex;
-     flex-direction: column;
-     align-items: center;
-     justify-content: center;
-     height: 100vh;
-     text-align: center;
-   }
- 
-   h1 {
-     font-size: 2.5em;
-   }
- 
-   p {
-     font-size: 1.2em;
-     margin-top: 20px;
-   }
- 
-   a {
-     margin-top: 40px;
-     color: #ffcccc;
-     text-decoration: none;
-     font-weight: bold;
-   }
- 
-   a:hover {
-     text-decoration: underline;
-   }
- </style>
+  <meta charset="UTF-8">
+  <title>Diseño de Carta Personalizada</title>
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      background-color: #fff0f5;
+      padding: 20px;
+    }
+
+    form {
+      max-width: 700px;
+      margin: auto;
+      background: #ffffff;
+      padding: 30px;
+      border-radius: 15px;
+      box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    h1 {
+      text-align: center;
+      color: #d6336c;
+    }
+
+    label {
+      display: block;
+      margin-top: 20px;
+      font-weight: bold;
+    }
+
+    input, textarea {
+      width: 100%;
+      padding: 10px;
+      margin-top: 5px;
+      border-radius: 10px;
+      border: 1px solid #ccc;
+    }
+
+    button {
+      display: block;
+      margin: 30px auto 0 auto;
+      background-color: #d6336c;
+      color: white;
+      padding: 12px 24px;
+      font-size: 16px;
+      border-radius: 12px;
+      border: none;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #a72550;
+    }
+
+    #ticket-container {
+      display: none;
+      margin-top: 40px;
+    }
+
+    #ticket {
+      max-width: 600px;
+      margin: auto;
+      padding: 30px;
+      background: #fff0f5;
+      border: 3px dashed #d6336c;
+      border-radius: 20px;
+      font-family: 'Georgia', serif;
+      color: #4a0033;
+      box-shadow: 0 0 25px rgba(214, 51, 108, 0.2);
+      background-image: url('https://www.transparenttextures.com/patterns/pink-paper.png');
+    }
+
+    #ticket h2 {
+      text-align: center;
+      font-size: 26px;
+      margin-bottom: 10px;
+    }
+
+    #ticket p {
+      margin: 10px 0;
+    }
+
+    #ticket small {
+      display: block;
+      text-align: center;
+      margin-top: 20px;
+      font-size: 14px;
+    }
+  </style>
 </head>
 <body>
- 
- <h1>¡Gracias por tu diseño!</h1>
- <p>Tu diseño ha sido enviado con éxito. Pronto lo revisaremos y nos comunicaremos contigo para cotizarlo ☺️</p>
- <a href="index.html">Volver al sitio</a>
- 
+
+<h1>Enviar Carta Personalizada</h1>
+
+<form id="form-personalizada" action="https://formsubmit.co/mitsuhamiyabami@gmail.com" method="POST" enctype="multipart/form-data">
+  <input type="hidden" name="_captcha" value="false">
+  <input type="hidden" name="_next" value="https://amreyna.github.io/Cartas-Sofia/grax.html">
+
+  <label>Nombre:</label>
+  <input type="text" name="Nombre" required>
+
+  <label>Correo electrónico:</label>
+  <input type="email" name="Correo" required>
+
+  <label>Mensaje o comentario adicional:</label>
+  <textarea name="Mensaje" rows="4" placeholder="Describe tu idea o inspiración..."></textarea>
+
+  <label>Sube tu diseño (imagen):</label>
+  <input type="file" name="Imagen" accept="image/*" required>
+
+  <button type="submit">Enviar diseño</button>
+</form>
+
+<!-- Ticket de confirmación -->
+<div id="ticket-container">
+  <div id="ticket">
+    <h2>🎨 Ticket de Carta Personalizada</h2>
+    <p><strong>Nombre:</strong> <span id="t-nombre"></span></p>
+    <p><strong>Correo:</strong> <span id="t-correo"></span></p>
+    <p><strong>Comentario:</strong> <span id="t-mensaje"></span></p>
+    <p><strong>📌 Precio:</strong> A convenir según diseño</p>
+    <small>✨ Este ticket confirma tu envío. Nos pondremos en contacto contigo pronto. ✨</small>
+  </div>
+
+  <button onclick="window.print()">🖨️ Imprimir o Guardar como PDF</button>
+</div>
+
+<script>
+document.getElementById("form-personalizada").addEventListener("submit", function(e) {
+  // Mostrar el ticket
+  e.preventDefault(); // Evita envío automático
+
+  // Obtener datos
+  const nombre = document.querySelector('input[name="Nombre"]').value;
+  const correo = document.querySelector('input[name="Correo"]').value;
+  const mensaje = document.querySelector('textarea[name="Mensaje"]').value;
+
+  document.getElementById("t-nombre").textContent = nombre;
+  document.getElementById("t-correo").textContent = correo;
+  document.getElementById("t-mensaje").textContent = mensaje || "Sin comentarios.";
+
+  // Mostrar ticket
+  document.getElementById("ticket-container").style.display = "block";
+
+  // Opcional: ocultar formulario
+  // document.getElementById("form-personalizada").style.display = "none";
+
+  // Después de breve pausa, enviar el formulario
+  setTimeout(() => {
+    e.target.submit();
+  }, 800);
+});
+</script>
+
 </body>
 </html>
