--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@ perfecto para quien ama la belleza cruda de <br>
 }
 </style>
 <script>
-  document.getElementById("formulario").addEventListener("submit", function (e) {
+  document.getElementById("formulario-imagen").addEventListener("submit", function (e) {
     e.preventDefault(); // Evita envío inmediato
 
     const nombre = this.nombre.value;
