--- a/pedido.html
+++ b/pedido.html
@@ -139,8 +139,9 @@
 <body>
   <h1>Realizar Pedido de Cartas</h1>
 
-  <form action="https://formsubmit.co/mitsuhamiyabami@gmail.com" method="POST">
+  <!-- <form action="https://formsubmit.co/mitsuhamiyabami@gmail.com" method="POST"> -->
     
+  <form action="https://formsubmit.co/cafe.des.poets@gmail.com" method="POST">   
     
   <input type="hidden" name="_captcha" value="false">
 
