--- a/grax.html
+++ b/grax.html
@@ -82,6 +82,7 @@
     <hr style="border: none; border-top: 1px dashed #d6336c; margin: 20px 0;">
 
     <p><strong>👤 Nombre del comprador:</strong> <span id="t-nombre"></span></p>
+    <p><strong>📅 Fecha del pedido:</strong> <span id="t-fecha"></span></p>
     <p><strong>🎁 Para:</strong> <span id="t-para"></span></p>
     <p><strong>💌 Cartas seleccionadas (<span id="t-cantidad"></span>):</strong></p>
     <ul id="t-cartas" style="padding-left: 20px; list-style-type: '💖 '; line-height: 1.6;"></ul>
@@ -119,7 +120,14 @@
   const total = localStorage.getItem("total") || "$0";
   const nombre = localStorage.getItem("nombre") || "No disponible";
   const destinatario = localStorage.getItem("destinatario") || "No disponible";
-
+  // Obtener fecha actual y mostrarla
+  const fechaSpan = document.getElementById("t-fecha");
+  const hoy = new Date();
+  
+  const opciones = { year: 'numeric', month: 'long', day: 'numeric' };
+  const fechaFormateada = hoy.toLocaleDateString('es-ES', opciones);
+  
+  fechaSpan.textContent = fechaFormateada;
   document.getElementById("t-nombre").textContent = nombre;
   document.getElementById("t-para").textContent = destinatario;
 
@@ -142,6 +150,10 @@
 
   // Borra los datos cuando el usuario regresa
   document.getElementById("btn-regresar").addEventListener("click", function () {
+    localStorage.clear();
+  });
+  // También limpiar localStorage al cerrar o recargar la página
+  window.addEventListener("beforeunload", function () {
     localStorage.clear();
   });
 </script>
