--- a/gracias.html
+++ b/gracias.html
@@ -41,7 +41,7 @@
  
  <h1>¡Gracias por tu comentario!</h1>
  <p>Tu mensaje ha sido enviado con éxito. Pronto lo revisaremos.</p>
- <a href="index.html">Volver al sitio</a>
+ <a href="codigo.html">Volver al sitio</a>
  
 </body>
 </html>
