--- a/grax.html
+++ b/grax.html
@@ -113,7 +113,7 @@
 </div>
 
 
-  <a href="index.html" class="boton-regresar">⬅️ Regresar al inicio</a>
+  <a href="codigo.html" class="boton-regresar">⬅️ Regresar al inicio</a>
 
 <script>
   const cartas = JSON.parse(localStorage.getItem("cartas")) || [];
