--- a/pedido.html
+++ b/pedido.html
@@ -214,7 +214,7 @@
     <div id="total-pedido" style="text-align: center; font-weight: bold; margin-top: 20px;">
       Total: $0
     </div>
-    <a href="index.html" class="boton-regresar">⬅️ Regresar al inicio</a>
+    <a href="codigo.html" class="boton-regresar">⬅️ Regresar al inicio</a>
 
   </form>
   
